--- a/setup.cfg
+++ b/setup.cfg
@@ -180,7 +180,7 @@ install_requires =
     setproctitle>=1.3.2
     shortuuid>=1.0.9
     six>=1.16.0
-    sklearn>=0.0
+    scikit-learn>=0.0
     smmap>=5.0.0
     soupsieve>=2.3.2.post1
     stable-diffusion-sdkit>=2.1.4
